[gd_scene load_steps=15 format=2]

[ext_resource path="res://SYSTEMS/INTERFACES/MENU.gd" type="Script" id=1]
[ext_resource path="res://RESOURCES/FONTS/TITLE.tres" type="DynamicFont" id=2]
[ext_resource path="res://RESOURCES/PICTURES/AREA_BUTTON_LOADING.png" type="Texture" id=3]
[ext_resource path="res://RESOURCES/PICTURES/START.png" type="Texture" id=4]
[ext_resource path="res://SYSTEMS/INTERFACES/AREA_BUTTON.gd" type="Script" id=5]
[ext_resource path="res://RESOURCES/PICTURES/EXIT.png" type="Texture" id=6]
[ext_resource path="res://RESOURCES/PICTURES/SETTINGS.png" type="Texture" id=7]
[ext_resource path="res://RESOURCES/PICTURES/EXSPIRAVIT_1104.png" type="Texture" id=9]
[ext_resource path="res://RESOURCES/PICTURES/ABYSSAL_FAUNA.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TITLE:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("BG:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ), Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("START/PROGRESS:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ), Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EXIT/PROGRESS:tint_progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ), Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SETTINGS/PROGRESS:tint_progress")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ), Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TITLE:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ), Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../PLAYER/RECT:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ), Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "INIT"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("START:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4.2, 5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 640, 600 ), Vector2( 640, 448 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EXIT:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.4, 5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 960, 600 ), Vector2( 960, 448 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SETTINGS:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4, 5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 320, 600 ), Vector2( 320, 448 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("START:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.2, 5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EXIT:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.4, 5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SETTINGS:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TITLE:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ "", "", "CLOUDELUSION 64" ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TITLE:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TITLE:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 320 ), Vector2( 0, 320 ), Vector2( 0, 240 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("..:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TITLE:custom_colors/font_color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("BOOT_SPLASH:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 0.2, 1, 0.2, 0.2, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("START/AREA/SHAPE:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("EXIT/AREA/SHAPE:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("SETTINGS/AREA/SHAPE:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("BOOT_SPLASH:texture")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("START/BUTTON:disabled")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("EXIT/BUTTON:disabled")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("SETTINGS/BUTTON:disabled")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("BG:color")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("BG:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("BOOT_SPLASH:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/22/type = "method"
tracks/22/path = NodePath(".")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_audio"
} ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("../PLAYER:MAX_SPEED")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 200 ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("../PLAYER:modulate")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0, 2.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 0.2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.0627451, 0.12549, 0.188235, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("BG:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.890196, 0.890196, 1 ), Color( 0.0627451, 0.12549, 0.188235, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("START/PROGRESS:tint_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ), Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EXIT/PROGRESS:tint_progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ), Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SETTINGS/PROGRESS:tint_progress")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ), Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TITLE:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ), Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../PLAYER/RECT:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.12549, 0.188235, 1 ), Color( 0.866667, 0.890196, 0.890196, 1 ) ]
}

[node name="MENU" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.12549, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="START" type="Sprite" parent="."]
position = Vector2( 640, 448 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="AREA" type="Area2D" parent="START"]
position = Vector2( 1.43051e-06, 2.86102e-06 )

[node name="SHAPE" type="CollisionShape2D" parent="START/AREA"]
position = Vector2( 7.62939e-06, 1.90735e-06 )
shape = SubResource( 3 )

[node name="TIMER" type="Timer" parent="START"]
wait_time = 0.02

[node name="PROGRESS" type="TextureProgress" parent="START"]
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture_progress = ExtResource( 3 )
fill_mode = 8
tint_progress = Color( 0.0627451, 0.12549, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="Button" parent="START"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = -8.0
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXIT" type="Sprite" parent="."]
position = Vector2( 960, 448 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="AREA" type="Area2D" parent="EXIT"]
position = Vector2( 1.43051e-06, 2.86102e-06 )
collision_layer = 0

[node name="SHAPE" type="CollisionShape2D" parent="EXIT/AREA"]
position = Vector2( 7.62939e-06, 1.90735e-06 )
shape = SubResource( 3 )

[node name="TIMER" type="Timer" parent="EXIT"]
wait_time = 0.02

[node name="PROGRESS" type="TextureProgress" parent="EXIT"]
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture_progress = ExtResource( 3 )
fill_mode = 8
tint_progress = Color( 0.0627451, 0.12549, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="Button" parent="EXIT"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = -8.0
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SETTINGS" type="Sprite" parent="."]
position = Vector2( 320, 448 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="AREA" type="Area2D" parent="SETTINGS"]
position = Vector2( 1.43051e-06, 2.86102e-06 )

[node name="SHAPE" type="CollisionShape2D" parent="SETTINGS/AREA"]
position = Vector2( 7.62939e-06, 1.90735e-06 )
shape = SubResource( 3 )

[node name="TIMER" type="Timer" parent="SETTINGS"]
wait_time = 0.02

[node name="PROGRESS" type="TextureProgress" parent="SETTINGS"]
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture_progress = ExtResource( 3 )
fill_mode = 8
tint_progress = Color( 0.0627451, 0.12549, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="Button" parent="SETTINGS"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = -8.0
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CAMERA" type="Camera2D" parent="."]
position = Vector2( 640, 360 )

[node name="ANIMATION_PLAYER" type="AnimationPlayer" parent="."]
anims/CHANGE_SCENE = SubResource( 4 )
anims/IN = SubResource( 5 )
anims/INIT = SubResource( 6 )
anims/OUT = SubResource( 8 )

[node name="BOOT_SPLASH" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 640, 360 )
texture = ExtResource( 10 )

[node name="PLAYER_MENU_BLOCK" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0

[node name="COLLISION_POLYGON" type="CollisionPolygon2D" parent="PLAYER_MENU_BLOCK"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 720 )

[node name="TITLE" type="Label" parent="."]
margin_top = 240.0
margin_right = 1280.0
margin_bottom = 298.0
size_flags_horizontal = 5
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.866667, 0.890196, 0.890196, 1 )
text = "CLOUDELUSION 64"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ENTER" from="START" to="." method="_on_ENTER"]
[connection signal="OPEN" from="START" to="." method="_on_START_OPEN"]
[connection signal="body_entered" from="START/AREA" to="START" method="_on_AREA_body_entered"]
[connection signal="body_exited" from="START/AREA" to="START" method="_on_AREA_body_exited"]
[connection signal="button_down" from="START/BUTTON" to="START" method="_on_BUTTON_button_down"]
[connection signal="button_up" from="START/BUTTON" to="START" method="_on_BUTTON_button_up"]
[connection signal="ENTER" from="EXIT" to="." method="_on_ENTER"]
[connection signal="OPEN" from="EXIT" to="." method="_on_EXIT_OPEN"]
[connection signal="body_entered" from="EXIT/AREA" to="EXIT" method="_on_AREA_body_entered"]
[connection signal="body_exited" from="EXIT/AREA" to="EXIT" method="_on_AREA_body_exited"]
[connection signal="button_down" from="EXIT/BUTTON" to="EXIT" method="_on_BUTTON_button_down"]
[connection signal="button_up" from="EXIT/BUTTON" to="EXIT" method="_on_BUTTON_button_up"]
[connection signal="ENTER" from="SETTINGS" to="." method="_on_ENTER"]
[connection signal="OPEN" from="SETTINGS" to="." method="_on_SETTINGS_OPEN"]
[connection signal="body_entered" from="SETTINGS/AREA" to="SETTINGS" method="_on_AREA_body_entered"]
[connection signal="body_exited" from="SETTINGS/AREA" to="SETTINGS" method="_on_AREA_body_exited"]
[connection signal="button_down" from="SETTINGS/BUTTON" to="SETTINGS" method="_on_BUTTON_button_down"]
[connection signal="button_up" from="SETTINGS/BUTTON" to="SETTINGS" method="_on_BUTTON_button_up"]
